fixing z-index

--- a/stylesheets/styles.less
+++ b/stylesheets/styles.less
@@ -231,6 +231,7 @@ header {
   &.fix {
     position: fixed;
     top: 0;
+    z-index: 2;
     background-color: white;
     border-bottom: solid 1px darken(white, 5%);
 
